name: gtk3
version: 0.15.0
cabal-version: >=1.18
build-type: Custom
license: LGPL-2.1
license-file: COPYING
copyright: (c) 2001-2010 The Gtk2Hs Team
maintainer: gtk2hs-users@lists.sourceforge.net
stability: provisional
homepage: http://projects.haskell.org/gtk2hs/
bug-reports: https://github.com/gtk2hs/gtk2hs/issues
synopsis: Binding to the Gtk+ 3 graphical user interface library
description:
    This is the core library of the Gtk2Hs suite of libraries for Haskell
    based on Gtk+. Gtk+ is an extensive and mature multi-platform toolkit
    for creating graphical user interfaces.
category: Graphics
author: Axel Simon, Duncan Coutts and many others
tested-with: GHC ==7.0.4 GHC ==7.2.2 GHC ==7.4.1
data-files:
    actionMenu/ActionMenu.hs
    actionMenu/Makefile
    buttonbox/ButtonBox.hs
    buttonbox/Makefile
    carsim/CarSim.hs
    carsim/Makefile
    concurrent/Makefile
    concurrent/Progress.hs
    concurrent/ProgressThreadedRTS.hs
    embedded/Embedded.hs
    embedded/Makefile
    embedded/MPlayer.hs
    embedded/Notes.txt
    embedded/Uzbl.hs
    fastdraw/FastDraw.hs
    fastdraw/Makefile
    filechooser/FileChooserDemo.glade
    filechooser/FileChooserDemo.hs
    filechooser/Makefile
    fonts/Fonts.hs
    fonts/Makefile
    graphic/Drawing.hs
    graphic/Makefile
    gtkbuilder/GtkBuilderTest.hs
    gtkbuilder/Makefile
    gtkbuilder/simple.ui
    hello/Makefile
    hello/World.hs
    inputmethod/Layout.hs
    inputmethod/Makefile
    menu/ComboDemo.hs
    menu/Makefile
    menu/MenuDemo.hs
    notebook/Notebook.hs
    notebook/Makefile
    statusicon/Makefile
    statusicon/StatusIcon.hs
    treelist/Completion.hs
    treelist/DirList.hs
    treelist/FilterDemo.hs
    treelist/ListDemo.hs
    treelist/ListDND.hs
    treelist/ListTest.glade
    treelist/ListTest.hs
    treelist/ListText.hs
    treelist/Makefile
    treelist/rgb.txt
    treelist/TreeDemo.hs
    treelist/TreeSort.hs
    treelist/TreeTest.glade
    treelist/TreeTest.hs
    treelist/resListDND/desktop.png
    treelist/resListDND/laptop.png
    treelist/resListDND/laptopSmall.png
    treelist/resListDND/printer.png
    treelist/resListDND/server.png
    treelist/resListDND/tower.png
    unicode/Arabic.hs
    unicode/Makefile
    demos.txt
data-dir: demo
extra-source-files:
    hsgtk.h
    Graphics/UI/Gtk/ModelView/Gtk2HsStore.h
    Graphics/UI/Gtk/General/hsgthread.h
    template-hsc-gtk2hs.h
    SetupWrapper.hs
    SetupMain.hs
    Gtk2HsSetup.hs
    marshal.list
    hierarchy3.list
x-types-file: Graphics/UI/Gtk/Types.chs
x-types-modname: Graphics.UI.Gtk.Types
x-types-forward: *System.Glib.GObject Graphics.UI.Gtk.General.Threading
x-types-destructor: objectUnrefFromMainloop

source-repository head
    type: git
    location: https://github.com/gtk2hs/gtk2hs
    subdir: gtk

flag have-gio
    description:
        Depend on GIO package, thereby enabling certain features.

flag build-demos
    description:
        Build the demo executables
    default: False

flag fmode-binary
    description:
        Set the default file translation mode for file I/O operations to _O_BINARY.
        Some GTK libraries open image files without specifing binary mode.
        If you have trouble loading gtk in ghci, then it may help to turn this
        option off.

library

    if os(osx)
        c-sources:
            cbits/quartzfix.c

    if arch(x86_64)
        cc-options: -fPIC

    if os(windows)
        cpp-options: -DWIN32 -fno-exceptions
        cc-options: -fno-exceptions
        extra-libraries:
            kernel32

    if os(windows)
        cpp-options: -D__USE_MINGW_ANSI_STDIO=1

    if (os(windows) && flag(fmode-binary))
        cc-options: -DGTK2HS_SET_FMODE_BINARY
    exposed-modules:
--        Graphics.UI.Gtk.Gdk.EventM
        Graphics.UI.Gtk.ModelView.Types
        Graphics.UI.Gtk.ModelView.CellLayout
        Graphics.UI.Gtk.ModelView.CustomStore
        Graphics.UI.Gtk.ModelView.ListStore
        Graphics.UI.Gtk.ModelView.TreeStore
        Graphics.UI.Gtk.ModelView.TreeModel
        Graphics.UI.Gtk.MenuComboToolbar.ComboBox
    build-tools: gtk2hsC2hs >=0.13.13, gtk2hsHookGenerator -any,
                 gtk2hsTypeGen -any
    build-depends:
        base >=4 && <5,
        array -any,
        containers -any,
        mtl -any,
        bytestring -any,
        transformers -any,
        text >=0.11.0.6 && <1.3,
        haskell-gi-base >=0.13 && <0.14,
        gi-glib >=0.2.44 && <0.2.47,
        gi-gobject >=0.2.44 && <0.2.47,
        gi-gdk >=0.3.16 && <0.3.19,
        gi-gtk >=0.3.16 && <0.3.19,
        gi-gdkpixbuf >=0.2.31 && <0.2.33
    cpp-options: -DDISABLE_DEPRECATED -U__BLOCKS__ -D__attribute__(A)=
    pkgconfig-depends: gthread-2.0 -any, gtk+-3.0 -any
    c-sources:
        Graphics/UI/Gtk/ModelView/Gtk2HsStore.c
    default-language: Haskell2010
    include-dirs: .
    x-signals-file: Graphics/UI/Gtk/Signals.chs
    x-signals-modname: Graphics.UI.Gtk.Signals
    x-signals-types: marshal.list
    x-signals-import: Graphics.UI.Gtk.General.Threading
    x-c2hs-header: hsgtk.h
    x-types-hierarchy: hierarchy3.list
    x-types-tag: default

executable gtk2hs-demo-actionMenu

    if !flag(build-demos)
        buildable: False
    main-is: ActionMenu.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        base -any,
        transformers -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: demo/actionMenu

executable gtk2hs-demo-buttonBox

    if !flag(build-demos)
        buildable: False
    main-is: ButtonBox.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        haskell-gi-base -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/buttonbox

executable gtk2hs-demo-carsim

    if !flag(build-demos)
        buildable: False
    main-is: CarSim.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        haskell-gi-base -any,
        base -any,
        transformers -any,
        time -any,
        gi-cairo -any,
        gi-glib -any,
        gi-gdk -any,
        cairo >=0.13.1.1 && <0.14
    default-language: Haskell2010
    hs-source-dirs: demo/carsim

executable gtk2hs-demo-progress

    if !flag(build-demos)
        buildable: False
    main-is: Progress.hs
    build-depends:
        gtk3 -any,
        gi-glib -any,
        gi-gtk -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/concurrent

executable gtk2hs-demo-progressThreadedRTS

    if !flag(build-demos)
        buildable: False
    main-is: ProgressThreadedRTS.hs
    build-depends:
        gtk3 -any,
        gi-glib -any,
        gi-gtk -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/concurrent
    ghc-options: -threaded

executable gtk2hs-demo-fastDraw

    if !flag(build-demos)
        buildable: False
    main-is: FastDraw.hs
    build-depends:
        gtk3 -any,
        gi-glib -any,
        gi-gtk -any,
        base -any,
        transformers -any,
        array -any,
        gi-cairo -any,
        cairo >=0.13.1.1 && <0.14
    default-language: Haskell2010
    hs-source-dirs: demo/fastdraw

executable gtk2hs-demo-fonts

    if !flag(build-demos)
        buildable: False
    main-is: Fonts.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        gi-pango -any,
        gi-pangocairo -any,
        base -any
    default-language: Haskell2010
    hs-source-dirs: demo/fonts

executable gtk2hs-demo-builder

    if !flag(build-demos)
        buildable: False
    main-is: GtkBuilderTest.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        haskell-gi-base -any,
        base -any,
        transformers -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: demo/gtkbuilder

executable gtk2hs-demo-helloworld

    if !flag(build-demos)
        buildable: False
    main-is: World.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/hello

--executable gtk2hs-demo-layout
--
--    if !flag(build-demos)
--        buildable: False
--    main-is: Layout.hs
--    build-depends:
--        gtk3 -any,
--        gi-gdk -any,
--        gi-gtk -any,
--        gi-pango -any,
--        gi-pangocairo -any,
--        base -any,
--        transformers -any,
--        gi-cairo -any,
--        text -any,
--        cairo >=0.13.1.1 && <0.14
--    default-language: Haskell2010
--    hs-source-dirs: demo/inputmethod

executable gtk2hs-demo-menudemo

    if !flag(build-demos)
        buildable: False
    main-is: MenuDemo.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        base -any,
        transformers -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: demo/menu

executable gtk2hs-demo-combodemo

    if !flag(build-demos)
        buildable: False
    main-is: ComboDemo.hs
    build-depends:
        gtk3 -any,
        haskell-gi-base -any,
        gi-gtk -any,
        text -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/menu

executable gtk2hs-demo-notebook

    if !flag(build-demos)
        buildable: False
    main-is: Notebook.hs
    build-depends:
        gtk3 -any,
        haskell-gi-base -any,
        gi-glib -any,
        gi-gdk -any,
        gi-gtk -any,
        base -any,
        transformers -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: demo/notebook

executable gtk2hs-demo-statusIcon

    if !flag(build-demos)
        buildable: False
    main-is: StatusIcon.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/statusicon

executable gtk2hs-demo-arabic

    if !flag(build-demos)
        buildable: False
    main-is: Arabic.hs
    build-depends:
        gtk3 -any,
        haskell-gi-base -any,
        gi-gtk -any,
        base -any,
        transformers -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: demo/unicode

executable gtk2hs-demo-overlay

    if !flag(build-demos)
        buildable: False
    main-is: Overlay.hs
    build-depends:
        gtk3 -any,
        gi-gtk -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: demo/overlay

