Name:           gtksourceview2
Version:        0.11.0
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Duncan Coutts, Peter Gavin, Axel Simon
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6.0
Stability:      provisional
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the GtkSourceView library.
Description:    GtkSourceView is a text widget that extends the standard GTK+ 2.x text widget
                GtkTextView. It improves GtkTextView by implementing syntax highlighting and
                other features typical of a source editor.

Category:       Graphics
Tested-With:    GHC == 6.12.1
Extra-Source-Files: gtksourceview2.h
                    Gtk2HsSetup.hs
                    marshal.list

x-Types-File:       Graphics/UI/Gtk/SourceView/Types.chs
x-Types-Tag:        gtksourceview2
x-Types-ModName:    Graphics.UI.Gtk.SourceView.Types
x-Types-Forward:    *Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       gtksourceview2

Library
        build-depends:  base >= 4 && < 5, array, containers, haskell98, mtl,
                        glib  >= 0.11 && < 0.12, 
                        gtk   >= 0.11 && < 0.12
						
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen
						
        exposed-modules:
          Graphics.UI.Gtk.SourceView
          Graphics.UI.Gtk.SourceView.SourceBuffer
          Graphics.UI.Gtk.SourceView.SourceIter
          Graphics.UI.Gtk.SourceView.SourceLanguage
          Graphics.UI.Gtk.SourceView.SourceLanguageManager
          Graphics.UI.Gtk.SourceView.SourceMark
          Graphics.UI.Gtk.SourceView.SourceStyle
          Graphics.UI.Gtk.SourceView.SourceStyleScheme
          Graphics.UI.Gtk.SourceView.SourceStyleSchemeManager
          Graphics.UI.Gtk.SourceView.SourceView
        other-modules:
          Graphics.UI.Gtk.SourceView.SourceStyle.Internal
          Graphics.UI.Gtk.SourceView.Types		  
          Graphics.UI.Gtk.SourceView.Signals
		  
        extensions:     ForeignFunctionInterface

        x-Signals-File:  Graphics/UI/Gtk/SourceView/Signals.chs
        x-Signals-Modname: Graphics.UI.Gtk.SourceView.Signals
        x-Signals-Types: marshal.list
		
        x-c2hs-Header:  gtksourceview2.h
        pkgconfig-depends: gtksourceview-2.0 >= 2.0.2
